syntax = "proto3";

package genius;

service DeliveryService {
  rpc  FindDeliveryStatusByUserId(FindDeliveryStatusByUserIdRequest) returns (JobDeliverArray);
  rpc  CreateDelivery(CreateDeliveryRequest) returns (JobDeliver);
  rpc  UpdateDeliveryStatus(UpdateDeliveryStatusRequest) returns (JobDeliver);
  rpc  DeleteDelivery(DeleteDeliveryRequest) returns (Empty);
}

message Empty {}

message JobDeliverArray {
  repeated JobDetail JobDeliver = 1;
}

message JobDeliver {
  int32 id = 1;
  JobDetail job = 2;
  User user = 3;
  int32 status = 4;
  bool is_delete = 5;
  google.protobuf.Timestamp create_time = 6;
  google.protobuf.Timestamp update_time = 7;
}

message FindDeliveryStatusByUserIdRequest {
  int32 userId =1;
}

message CreateDeliveryRequest {
  int32 jobId =1;
  int32 userId = 2;
  int32 status = 3;
}

message UpdateDeliveryStatusRequest {
  int32 deliverId =1;
  int32 status = 2;
}


message DeleteDeliveryRequest {
  int32 deliverId =1;
}

